2003-10-14  Don Allingham  <dallingham@users.sourceforge.net>
	* src/data/templates/Makefile.am: install blue_edge.tpkg
	* src/docgen/HtmlDoc.py: report error correctly on missing
	template

2003-10-13  Don Allingham  <dallingham@users.sourceforge.net>
	* src/GrampsParser.py: handle new witness format in XML file
	* src/WriteXML.py: handle new witness format in XML file
	* src/dialog.glade: removed unused callbacks
	* src/gramps.glade: adjust window size
	* src/ListModel.py: add the ability to find an entry
	* src/ChooseParents.py: Select the preferred spouse of the first
	selected person.

2003-10-13  Alex Roitman  <shura@alex.neuro.umn.edu>
	* configure.in, configure: Change version and release numbers.
	* TODO: Remove completed items.
	* src/plugins.glade: Switch from GtkDialog to GtkWindow (prevents it 
	from always being on top under metacity). Remove extra button.
	* src/Plugins.py (PluginDialog.__init__): Provide custom labels and
	tooltips for reports (Generate) and tools (Run);
	(ReportPlugins.__init__, ToolPlugins.__init__): call PluginDialog
	with appropriate labels and tooltips.
	* src/Report.py (BareReportDialog.__init__): Change button back to OK.
	* src/plugins/rel_ru.py (getallancestors): Replace with existing
	apply_filter from Relationship.py.
	* src/gramps.glade: Correct tooltips in Family Views (make parents an 
	active family).

2003-10-12  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/gramps_main.py (edit_button_clicked): Modify edit person call 
	to always handle currently active person in family view;
	(delete_person_clicked): Use single person mlist for family views;
	(delete_person_response): Replace Back with just setting active 
	person to current history index (remove_from_history already places
	hindex in the correct place). Always call redraw_histmenu().
	* src/FamilyView.py (spouse_swap): Use change_active_person() call
	in order to correctly build history.

2003-10-12  Don Allingham  <dallingham@users.sourceforge.net>