@@ -1,3 +1,6 @@
+2003-10-14  Alex Roitman  <shura@alex.neuro.umn.edu>
+	* src/ListModel.py (find): Prevent traceback if the entry is not found.
+
 2003-10-14  Don Allingham  <dallingham@users.sourceforge.net>
 	* src/data/templates/Makefile.am: install blue_edge.tpkg
 	* src/docgen/HtmlDoc.py: report error correctly on missing
